# test_student_performance

./: .flake8  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: main.yml
reports/: student_performance.py
src/: main.py
src/example_files/: students1.csv
src/reports/: __init__.py  base_report.py  student_performance.py
src/utils/: __init__.py  file_reader.py  validator.py
tests/: conftest.py  test_integration.py  test_student_performance.py
utils/: file_reader.py  validator.py
