[project]
name = "test_student_grades"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Виктор Сагалаков", email = "sagalakov.viktor@gmail.com"},
]
dependencies = ["tabulate>=0.9.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "black>=25.1.0",
    "flake8>=7.3.0",
    "flake8-bugbear>=24.12.12",
    "flake8-pie>=0.16.0",
    "isort>=6.0.1",
    "mypy>=1.18.2",
    "types-tabulate>=0.9.0.20241207",
    "pytest-cov>=7.0.0",
]
